[package]
name = "futurize-derive"
version = "0.4.1"
authors = ["Arvid E. Picciani <aep@exys.org>"]
license = "MIT"
description = "Future worker boilerplate codgen"
repository = "https://github.com/aep/futurize"

[lib]
proc-macro = true

[dependencies]
quote = "0.6.6"
syn = "0.14.8"
proc-macro2 = "0.4.12"
heck = "0.3.0"
